feat: Add StyleCSS

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <title>Document</title>
 </head>
 <body>
-
-
-<h1 id=""></h1>
+<div>
+    <h1 class="container text-center my-5 text-white display-1 fw-bold" id="">FizzBuzzDOM</h1>
+</div>
+<div class="container">
+    <div id="box-container"></div>
+</div>
 
 
 
